--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Time New Roman';
+  font-family: 'EB Garamond', serif;
 }
 
 h2 {
